# Remove-s3-audio-r-solu-9gb-data-4g-posthog-integrer-auto-mis-a-jour-integrer-

./: .gitattributes  .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  LICENSE  PROMPT-DESIGN-SYSTEM.md  build-app.sh  build-binaries.sh  dev-app-update.yml  electron-builder.config.js  electron.vite.config.ts  eslint.config.mjs  render.yaml  tsconfig.json  tsconfig.node.json  tsconfig.web.json  tsconfig.web.tsbuildinfo  vite-env.d.ts
.claude/: settings.local.json
.cursor/rules/: always.mdc  code-conventions.mdc  react.mdc  typescript.mdc
.github/workflows/: autolink-pr-to-issue.yml  build-windows.yml  build.yml  native-build-check.yml  release.yml  test-runner.yml
app/: app.tsx  index.html  sentry.ts
app/assets/: accesssibility.webm  microphone.webm
app/hooks/: useBillingState.test.ts  useBillingState.ts  usePlatform.ts
app/performance/: performance.autotune.ts  performance.config.ts  performance.context.tsx  performance.engine.ts
app/store/: useAdvancedSettingsStore.ts  useAppStylingStore.ts  useDictionaryStore.ts  useMainStore.ts  useOnboardingStore.ts  usePerformanceStore.ts  usePermissionsStore.ts  useSettingsStore.ts  useShortcutEditingStore.ts  useUpdateOverlayStore.ts  useUserMetadataStore.ts
app/styles/: app.css  globals.css  window.css
app/utils/: audioUtils.ts  healthCheck.test.ts  keyboard.test.ts  keyboard.ts  utils.ts
ito-design-template/: tailwind.config.js
ito-design-template/app/: App.tsx
lib/__tests__/: setup.ts
lib/auth/: events.test.ts  events.ts
lib/clients/: grpcClient.test.ts  grpcClient.ts  itoHttpClient.ts
lib/constants/: external-links.ts  keyboard-defaults.ts  store-keys.test.ts  supported-languages.ts
lib/main/: ActiveWindowMonitor.ts  app.ts  appNap.ts  autoUpdaterWrapper.ts  env.ts  faviconFetcher.ts  itoSessionManager.test.ts  itoSessionManager.ts  itoStreamController.test.ts  itoStreamController.ts  logger.ts  main.ts  recordingStateNotifier.ts  sentry.ts  store.test.ts  store.ts  syncService.test.ts  syncService.ts  teardown.ts  voiceInputService.test.ts  voiceInputService.ts
lib/media/: IAccessibilityContextProvider.ts  active-application.test.ts  (+14 more)
native/: clippy.toml  rustfmt.toml
native/active-application/: Cargo.toml  active-application.manifest  build.rs
native/active-application/src/: main.rs
native/audio-recorder/: Cargo.toml  audio-recorder.manifest  build.rs
native/audio-recorder/src/: main.rs
native/global-key-listener/: Cargo.toml  README.md  build.rs  global-key-listener.manifest
native/global-key-listener/src/: key_codes.rs  main.rs
native/selected-text-reader/: Cargo.toml  build.rs  selected-text-reader.manifest
native/selected-text-reader/src/: macos.rs  main.rs  windows.rs
native/text-writer/: Cargo.toml  build.rs  text-writer.manifest
native/text-writer/src/: macos_writer.rs  main.rs  windows_writer.rs
resources/: installer.nsh
scripts/: clean-app-data.js  generate-constants.js  uninstall-windows.ps1
server/: .dockerignore  Dockerfile  README.md  buf.gen.yaml  buf.yaml  docker-compose.yml  package.json  test-client.ts
(+251 files in other folders)
