[package]
name = "active-application"
version = "0.1.0"
edition = "2024"

[dependencies]
active-win-pos-rs = "0.9.0"
serde = "1.0.219"
serde_json = "1.0.141"
base64 = "0.22"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
] }
image = { version = "0.25", default-features = false, features = ["png"] }

[build-dependencies]
tauri-winres = "0.3.5"

[lints]
workspace = true
