[package]
name = "audio-recorder"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5"
anyhow = "1.0.98"
rubato = "0.16.2"
num-traits = "0.2.19"
dasp_sample = "0.11.0"

[build-dependencies]
tauri-winres = "0.3.5"

[lints]
workspace = true
