[package]
name = "global-key-listener"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

[dependencies.rdev]
git = "https://github.com/heyito/rdev"
branch = "main"
features = ["unstable_grab"]

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.21.0", features = ["xlib"] }
evdev = "0.12.1"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
core-graphics = "0.22"
cocoa = "0.25"
objc = "0.2"

[build-dependencies]
tauri-winres = "0.3.5"

[lints]
workspace = true
