[package]
name = "selected-text-reader"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5"
arboard = "3.4"
lru = "0.12"
parking_lot = "0.12"
enigo = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
selection = "1.2.0"

[target.'cfg(target_os = "macos")'.dependencies]
accessibility-ng = "0.1.6"
accessibility-sys-ng = "0.1"
active-win-pos-rs = "0.8"
core-foundation = "0.9"
libc = "0.2"

[build-dependencies]
tauri-winres = "0.3.5"

[lints]
workspace = true
