[package]
name = "text-writer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
enigo = "0.3.0"

[target.'cfg(target_os = "windows")'.dependencies]
enigo = "0.3.0"
clipboard-win = "5.0"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
core-foundation = "0.9"
cocoa = "0.25"

[build-dependencies]
tauri-winres = "0.3.5"

[lints]
workspace = true
